@@ -27,7 +27,9 @@
 	    <preference id="scroll_to_hide" name="extensions.firetray.scroll_to_hide" type="bool" />
 	    <preference id="grab_multimedia_keys" name="extensions.firetray.grab_multimedia_keys" type="bool" />
         <preference id="dont_count_spam" name="extensions.firetray.dont_count_spam" type="bool" /> 
-        <preference id="accounts_to_check" name="extensions.firetray.accounts_to_check" type="string" /> 
+        <preference id="accounts_to_exclude" name="extensions.firetray.accounts_to_exclude" type="string" /> 
+        
+        
     </preferences>
  
 <tabbox>
@@ -109,7 +111,7 @@
               <checkbox label="&firetray.show_unread_number;" accesskey="&firetray.show_unread_number_accesskey;"  preference="show_num_unread" />
 
               <groupbox id="accounts_box">
-                <caption label="&firetray.mailaccounts_settings;"/>
+                <caption label="&firetray.mail_accounts_exclude;"/>
                 <!-- accounts  are dynamically added here with insert_accounts_name() functions, called at the bottom of this file -->
               </groupbox>
 
